added colab links

--- a/ML/ml-tutorial.ipynb
+++ b/ML/ml-tutorial.ipynb
@@ -17,16 +17,10 @@
     "</table>\n",
     "\n",
     "<h1>Introduction to Machine Learning (Hands-on Tutorial)</h1>\n",
-    "<h3>Stergios CHRISTODOULIDIS & Maria Vakalopoulou</h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install pyradiomics"
+    "<h3>Stergios CHRISTODOULIDIS & Maria Vakalopoulou</h3>\n",
+    "\n",
+    "\n",
+    "[![ML-tutorial](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/stergioc/BioMed-AI-Summer-School/blob/master/ML/ml-tutorial.ipynb)"
    ]
   }
  ],
