--- a/DL/dl-tutorial.ipynb
+++ b/DL/dl-tutorial.ipynb
@@ -17,7 +17,9 @@
     "</table>\n",
     "\n",
     "<h1>Introduction to Deep Learning (Hands-on Tutorial)</h1>\n",
-    "<h3>Stergios CHRISTODOULIDIS & Maria Vakalopoulou</h3>"
+    "<h3>Stergios CHRISTODOULIDIS & Maria Vakalopoulou</h3>\n",
+    "\n",
+    "[![ML-tutorial](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/stergioc/BioMed-AI-Summer-School/blob/master/DL/dl-tutorial.ipynb)"
    ]
   }
  ],
