--- a/ML/ml-tutorial.ipynb
+++ b/ML/ml-tutorial.ipynb
@@ -26,6 +26,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "KRx93d2o5UoT"
+      },
       "source": [
         "# Introduction\n",
         "\n",
@@ -40,13 +43,15 @@
         "\n",
         "\n",
         "In the following code block the necessary packages will be installed and imported. Moreover, the different files that are required for the purposes of this tutorial will be downloaded."
-      ],
-      "metadata": {
-        "id": "KRx93d2o5UoT"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "R5RWME4K2hfu"
+      },
+      "outputs": [],
       "source": [
         "# Installing necessary libraries\n",
         "!pip install SimpleITK pyradiomics\n",
@@ -63,26 +68,26 @@
         "import matplotlib.pyplot as plt\n",
         "# This module is used for interaction with pyradiomics\n",
         "from radiomics import featureextractor  "
-      ],
-      "metadata": {
-        "id": "R5RWME4K2hfu"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "J3nyAWoC3CYG"
+      },
       "source": [
         "# Part I - Loading and Visualization of data\n",
         "\n",
         "In this first part we will load and visualize the data we downloaded. The data are MRI images of the brain with tumoral regions. For each patient a number of different modalities are available (T1, T2, T1ce, FLAIR) together with a segmentation map."
-      ],
-      "metadata": {
-        "id": "J3nyAWoC3CYG"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TWUzhJuhO__v"
+      },
+      "outputs": [],
       "source": [
         "# Retrieves the directories of the downloaded MRI images\n",
         "t1_file_list = sorted(glob.glob('data/mri/**/**/*_t1.nii.gz'))\n",
@@ -100,15 +105,15 @@
         "    'Seg': seg_file_list\n",
         "})\n",
         "database.head()"
-      ],
-      "metadata": {
-        "id": "TWUzhJuhO__v"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "VtKzqjIMjpZw"
+      },
+      "outputs": [],
       "source": [
         "IDX = 10\n",
         "\n",
@@ -123,24 +128,24 @@
         "# Shows the dimensions of the MRI image\n",
         "print(f\"Shape of the image: {img_np.shape}\")\n",
         "print(f\"Shape of the segmentation: {seg_np.shape}\")"
-      ],
-      "metadata": {
-        "id": "VtKzqjIMjpZw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "There are $155$ slices in the volume, where each slice is $240\\times240$ pixel image. Similary the segmentation image have the same dimensions. Let's visualise some of them."
-      ],
       "metadata": {
         "id": "QX7ndz3tR7CO"
-      }
+      },
+      "source": [
+        "There are $155$ slices in the volume, where each slice is $240\\times240$ pixel image. Similary the segmentation image have the same dimensions. Let's visualise some of them."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9-sHpbV7S8KN"
+      },
+      "outputs": [],
       "source": [
         "# Visualize a single slide of the MRI with the segmentation mask overlaid\n",
         "SLIDE = 80\n",
@@ -150,15 +155,15 @@
         "plt.imshow(seg_np[SLIDE,...], alpha=0.5)\n",
         "plt.axis('off')\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "9-sHpbV7S8KN"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "8V76AkFEWGdY"
+      },
+      "outputs": [],
       "source": [
         "# Visualize multiple slices of the MRI image with the segmentation mask overlaid\n",
         "fig, axes = plt.subplots(ncols=5, nrows=4, figsize=(7, 5))\n",
@@ -171,24 +176,24 @@
         "\n",
         "plt.tight_layout()\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "8V76AkFEWGdY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "As already mentioned for this specific database there are multiple modalities available, let's visualize all the modalities for a single patient."
-      ],
       "metadata": {
         "id": "cxX-8ZXLaqOE"
-      }
+      },
+      "source": [
+        "As already mentioned for this specific database there are multiple modalities available, let's visualize all the modalities for a single patient."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vWogxAi8apzi"
+      },
+      "outputs": [],
       "source": [
         "# Load all MRI protocols and the segmentation\n",
         "t1_np = sitk.GetArrayFromImage(sitk.ReadImage(database.at[IDX,'T1']))\n",
@@ -213,15 +218,13 @@
         "  axes[i].set_title(k)\n",
         "  axes[i].axis('off')\n",
         "plt.tight_layout()"
-      ],
-      "metadata": {
-        "id": "vWogxAi8apzi"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "d8eRFlPndbGW"
+      },
       "source": [
         "# Part II - Data Preprocessing\n",
         "\n",
@@ -230,13 +233,15 @@
         "$$I_z^{ij} = \\frac{I^{ij} - \\mu_I}{\\sigma_I}.$$\n",
         "\n",
         "Because of the abundance of background values in each volume, we compute $\\mu_I$ and $\\sigma_I$ only over the pixels of $I$ above a certain threshold."
-      ],
-      "metadata": {
-        "id": "d8eRFlPndbGW"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3vybRV-keD6a"
+      },
+      "outputs": [],
       "source": [
         "# Histogram of the pixel values for each modality\n",
         "plt.hist([\n",
@@ -253,15 +258,13 @@
         "plt.legend()\n",
         "plt.yscale('log')\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "3vybRV-keD6a"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "BDMwy9o2mfJA"
+      },
       "source": [
         "### Excerise 1 - MRI Image Loading and Standardization: \n",
         "\n",
@@ -271,28 +274,30 @@
         "You can use the necessary function from the previous code blocks as well as the following functions: \n",
         " - `<SimpleITK object> = sitk.GetImageFromArray(<numpy array>)`\n",
         " - `<SimpleITK object>.CopyInformation(<SimpleITK object>)`"
-      ],
-      "metadata": {
-        "id": "BDMwy9o2mfJA"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uC4detwOgsdJ"
+      },
+      "outputs": [],
       "source": [
         "def load_img_norm(image_dir, threshold=0):\n",
         "  ### START CODE HERE ###\n",
         "\n",
         "  ### END CODE HERE ###\n",
         "  return normalized_sitk, normalized_np"
-      ],
-      "metadata": {
-        "id": "uC4detwOgsdJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "r_ZjRql4hzSw"
+      },
+      "outputs": [],
       "source": [
         "# Histogram of the pixel values for each modality\n",
         "IDX = 10\n",
@@ -310,15 +315,13 @@
         "plt.legend()\n",
         "plt.yscale('log')\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "r_ZjRql4hzSw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "i9NMM2VpqfVo"
+      },
       "source": [
         "# Part III - Radiomics Feature Extraction\n",
         "\n",
@@ -329,116 +332,119 @@
         "You can use the excecute function from the `RadiomicsFeatureExtractor()` class that it is available in the `featureextractor` that we have already loaded.\n",
         "\n",
         "Check the documentation [here](https://pyradiomics.readthedocs.io/en/latest/radiomics.html#radiomics.featureextractor.RadiomicsFeatureExtractor)."
-      ],
-      "metadata": {
-        "id": "i9NMM2VpqfVo"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "mpEQyLocqer_"
+      },
+      "outputs": [],
       "source": [
         "### START CODE HERE ###\n",
         "\n",
         "### END CODE HERE ###\n",
         "\n",
         "print(pd.Series(result))"
-      ],
-      "metadata": {
-        "id": "mpEQyLocqer_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6SBHYzcf2m50"
+      },
       "source": [
         "# Part IV - Feature Exploration and Visualization\n",
         "\n",
         "The first step in applying machine learning is to understand the data, so as to be able to identify a good target to learn, as well as an appropriate learning algorithm among many alternatives.\n",
         "\n",
-        "The analysis above has been applied on few patients only. Since our time in this practical session is limited, the features on the entire BraTS dataset has been extracted into a csv file located at `./data/radiomics.csv`. This file contains one row per patient per input modality (T1, T1ce, T2, flair) per type of tumor ROI ($4\\times4=16$ rows per patient). With the feaures from the full cohort, we can begin to explore the data."
-      ],
-      "metadata": {
-        "id": "6SBHYzcf2m50"
-      }
+        "The analysis above has been applied on few patients only. Since our time in this practical session is limited, the features on the entire BraTS dataset has been extracted into a csv file located at `./data/radiomics.csv`. This file contains one row per patient per input modality (T1, T1ce, T2, flair). With the feaures from the full cohort, we can begin to explore the data."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data = pd.read_csv('data/radiomics.csv')\n",
-        "display(data)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "y99h8bNr2998"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "data = pd.read_csv('data/radiomics.csv')\n",
+        "display(data)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-5cAUMkQ3VUK"
+      },
       "source": [
         "### Pairwise joint distributions\n",
         "\n",
         "We can see the join distribution of any pair of columns/attributes/variables/features by using the pairplot function. We do this for the first 5 features. Each datapoint is a patient and the colour indicates the disease class."
-      ],
-      "metadata": {
-        "id": "-5cAUMkQ3VUK"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "xTeXzFQq3Vub"
+      },
+      "outputs": [],
       "source": [
         "# filter one sequence type and a segmentation type (you can change the sequence type and segmentation type)\n",
         "d = data[(data['sequence']=='t1ce')].iloc[:, 2:8] \n",
         "sns.pairplot(d, hue='label', size=2.5)\n",
         "plt.tight_layout()\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "xTeXzFQq3Vub"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Feature Correlation Heatmap"
-      ],
       "metadata": {
         "id": "ZSbfYnuy8NzP"
-      }
+      },
+      "source": [
+        "### Feature Correlation Heatmap"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "xLhPEskE3j3v"
+      },
+      "outputs": [],
       "source": [
         "# filter one sequence type and a segmentation type (you can change the sequence type and segmentation type)\n",
         "d = data[(data['sequence']=='t1')].iloc[:, 3:]\n",
         "sns.clustermap(d.corr())\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "xLhPEskE3j3v"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Part V - Data Preparation"
-      ],
       "metadata": {
         "id": "nyez6gVI8ZRs"
-      }
+      },
+      "source": [
+        "# Part V - Data Preparation"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KOl08xWd8jNy"
+      },
+      "outputs": [],
       "source": [
         "# Reshapes the dataframe such as each row to have all the features for a patient\n",
         "data = data.pivot_table(index=['patient', 'label'],\n",
         "                                columns=['sequence'],\n",
-        "                                values=data.columns[4:])\n",
+        "                                values=data.columns[3:])\n",
         "data.columns = ['_'.join(col).strip() for col in data.columns.values]\n",
         "data.reset_index(level=1, inplace=True)\n",
         "\n",
@@ -447,28 +453,29 @@
         "data.loc[data['label'] == 'LGG', 'label'] = 0\n",
         "\n",
         "display(data)"
-      ],
-      "metadata": {
-        "id": "KOl08xWd8jNy"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zZQKAMWp9KDz"
+      },
       "source": [
         "### Train-Test Splitting\n",
         "\n",
         "Let's now use <code>train_test_split</code> from the function in scikit-learn to divide features data (x_data) and target data (y_data) even further into train and test. Here we will have 30% of the data for the test set. It is also a good practice to define a random state for reproducible results.\n",
         "\n",
-        "Note: Stratify parameter in the function makes the equal proportion in the split. For example, if variable y is a binary categorical variable with values 0 and 1 and there are 25% of zeros and 75% of ones, stratify=y_data will make sure that your random split has 25% of 0's and 75% of 1'"
-      ],
-      "metadata": {
-        "id": "zZQKAMWp9KDz"
-      }
+        "*Note: Stratify parameter in the function makes the equal proportion in the split. For example, if variable y is a binary categorical variable with values 0 and 1 and there are 25% of zeros and 75% of ones, stratify=y_data will make sure that your random split has 25% of 0's and 75% of 1'*"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "kk0wsVOG9KU8"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
@@ -479,15 +486,13 @@
         "print(f'x_test shape: {x_test.shape}')\n",
         "print(f'y_train shape: {y_train.shape}')\n",
         "print(f'y_test shape: {y_test.shape}')"
-      ],
-      "metadata": {
-        "id": "kk0wsVOG9KU8"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "H4cBp9_k84Jq"
+      },
       "source": [
         "### Exercise 3 - Radiomics Features Preprocessing\n",
         "\n",
@@ -501,26 +506,26 @@
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "H4cBp9_k84Jq"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "a3KgPKz6_jui"
+      },
+      "outputs": [],
       "source": [
         "### START CODE HERE ###\n",
         "\n",
         "### END CODE HERE ###"
-      ],
-      "metadata": {
-        "id": "a3KgPKz6_jui"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "AfjHEZFd-qeE"
+      },
       "source": [
         "### Exersise 4 - Train a classifier\n",
         "\n",
@@ -529,52 +534,54 @@
         "You can find all the available models [here](https://scikit-learn.org/stable/supervised_learning.html).\n",
         "\n",
         "*Tips: Start simple using the default parameters of a [logistic regression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html) classifier or a [random forest](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html).*"
-      ],
-      "metadata": {
-        "id": "AfjHEZFd-qeE"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SO0wi80h9cVO"
+      },
+      "outputs": [],
       "source": [
         "### START CODE HERE ###\n",
         "\n",
         "### END CODE HERE ###"
-      ],
-      "metadata": {
-        "id": "SO0wi80h9cVO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "dWU4NF_v-EOM"
+      },
       "source": [
         "### Performance Measure\n",
         "\n",
         "Once the model is trained, i.e. `fit` function is done, it can be used to classify any input sample with the correct shape. Notably, training and validation accuracies can be obtained with other performance indicators:"
-      ],
-      "metadata": {
-        "id": "dWU4NF_v-EOM"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "fkVo9V3Q9yy9"
+      },
+      "outputs": [],
       "source": [
         "accuracy_train = clf.score(X=x_train_norm, y=y_train)\n",
         "probs = clf.predict_proba(x_train)\n",
         "accuracy_test = clf.score(X=x_test_norm, y=y_test)\n",
         "print(f'Training accuracy: {accuracy_train}')\n",
         "print(f'Test accuracy: {accuracy_test}')"
-      ],
-      "metadata": {
-        "id": "fkVo9V3Q9yy9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7GSz6DGi_4fT"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
         "\n",
@@ -586,26 +593,21 @@
         "plt.title('Confusion Matrix')\n",
         "plt.grid(False)\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "7GSz6DGi_4fT"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
-    "orig_nbformat": 4,
     "colab": {
       "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
