--- a/DL/dl-tutorial.ipynb
+++ b/DL/dl-tutorial.ipynb
@@ -105,7 +105,7 @@
         "# A large portion of the BraTS data (~2GB) of data will be downloaded with\n",
         "# this command, it should take about ~3 minutes.\n",
         "!wget https://nextcloud.centralesupelec.fr/s/YXd3S8sAYbjaz2Z/download/dl-tutorial-data.zip\n",
-        "!unzip dl-tutorial-data.zip -d GEP1"
+        "!unzip -q dl-tutorial-data.zip -d GEP1"
       ]
     },
     {
